[package]
name = "logicaffeine-kernel"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Pure Calculus of Constructions type theory - NO LEXICON"
readme = "README.md"

[dependencies]
logicaffeine-base = { version = "0.7.0", path = "../logicaffeine_base" }
# CRITICAL: NO LEXICON DEPENDENCY - Milner Invariant
