[package]
name = "logicaffeine-language"
version = "0.9.2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Natural language to first-order logic pipeline"
readme = "README.md"
build = "build.rs"

[dependencies]
logicaffeine-base = { version = "0.9.2", path = "../logicaffeine_base" }
logicaffeine-lexicon = { version = "0.9.2", path = "../logicaffeine_lexicon" }
logicaffeine-proof = { version = "0.9.2", path = "../logicaffeine_proof" }

# Arena allocation
bumpalo = "3.19"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
dynamic-lexicon = ["logicaffeine-lexicon/dynamic-lexicon"]
