[package]
name = "logicaffeine-language"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Natural language to first-order logic pipeline"
readme = "README.md"
build = "build.rs"

[dependencies]
logicaffeine-base = { workspace = true }
logicaffeine-lexicon = { workspace = true }
logicaffeine-proof = { workspace = true }

# Arena allocation
bumpalo = "3.19"

# Serialization (for HW ontology types)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
dynamic-lexicon = ["logicaffeine-lexicon/dynamic-lexicon"]
