[package]
name = "logicaffeine-lexicon"
version = "0.8.4"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "English vocabulary types and compile-time lexicon lookup for logicaffeine"
readme = "README.md"

[dependencies]
logicaffeine-base = { version = "0.8.4", path = "../logicaffeine_base" }

# For dynamic-lexicon feature (runtime JSON loading)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = []
dynamic-lexicon = ["serde", "serde_json", "rand"]

[package.metadata.docs.rs]
features = ["dynamic-lexicon"]
