[package]
name = "logicaffeine-lsp"
version = "0.8.6"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Language Server Protocol implementation for LogicAffeine"

[[bin]]
name = "logicaffeine-lsp"
path = "src/main.rs"

[dependencies]
logicaffeine-base = { version = "0.8.6", path = "../logicaffeine_base" }
logicaffeine-language = { version = "0.8.6", path = "../logicaffeine_language" }
logicaffeine-compile = { version = "0.8.6", path = "../logicaffeine_compile", features = ["codegen"] }
logicaffeine-proof = { version = "0.8.6", path = "../logicaffeine_proof" }

tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
