[package]
name = "logicaffeine-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Language Server Protocol implementation for LOGOS (the logicaffeine language)"
readme = "README.md"

[[bin]]
name = "logicaffeine-lsp"
path = "src/main.rs"

[dependencies]
logicaffeine-base = { workspace = true }
logicaffeine-language = { workspace = true }
logicaffeine-compile = { workspace = true, features = ["codegen"] }
logicaffeine-proof = { workspace = true }

tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
