[package]
name = "logicaffeine-proof"
version = "0.8.14"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Backward-chaining proof engine with Socratic hints"
readme = "README.md"

[features]
default = []

[dependencies]
logicaffeine-base = { version = "0.8.14", path = "../logicaffeine_base" }
logicaffeine-kernel = { version = "0.8.14", path = "../logicaffeine_kernel" }
# CRITICAL: NO LANGUAGE DEPENDENCY - Liskov Invariant
