[package]
name = "logicaffeine-synth"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "EXODIA Forge: Z3 stencil specifications, witness verification and template synthesis (offline tooling — never in the runtime path)"
readme = "README.md"
# Offline dev tooling consumed only by the (unpublished) test harness; kept off
# crates.io so the published surface stays intentional.
publish = false

[dependencies]
z3 = "0.12"
logicaffeine-forge = { workspace = true }
