[package]
name = "logicaffeine-tests"
version = "0.9.11"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
verification = ["logicaffeine-compile/verification", "logicaffeine-proof/verification"]
ffi-link-tests = []
web-tests = ["dep:logicaffeine-web"]

[dependencies]
logicaffeine-web = { path = "../../apps/logicaffeine_web", optional = true }

[dev-dependencies]
logicaffeine-base = { path = "../logicaffeine_base" }
logicaffeine-kernel = { path = "../logicaffeine_kernel" }
logicaffeine-language = { path = "../logicaffeine_language" }
logicaffeine-compile = { path = "../logicaffeine_compile" }
logicaffeine-proof = { path = "../logicaffeine_proof" }
logicaffeine-data = { path = "../logicaffeine_data" }
logicaffeine-system = { path = "../logicaffeine_system", features = ["full"] }
logicaffeine-lexicon = { path = "../logicaffeine_lexicon" }
logicaffeine-verify = { path = "../logicaffeine_verify" }
tempfile = "3"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
