[package]
name = "logicaffeine-tv"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "SMT translation validation: prove emitted Rust is observationally equivalent to LOGOS source"
readme = "README.md"

[dependencies]
logicaffeine-compile = { workspace = true }
logicaffeine-verify = { workspace = true }
