[package]
name = "logicaffeine-verify"
version = "0.9.13"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Z3-based static verification for Logicaffeine (requires Pro+ license)"
readme = "README.md"

[dependencies]
# SMT solver
z3 = "0.12"

# Serialization for license cache
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for license validation
ureq = { version = "2.9", features = ["json"] }

# User directories for cache
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
