[package]
name = "logicaffeine-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Z3-based static verification for Logicaffeine (requires Pro+ license)"
readme = "README.md"

[features]
# Build Z3 from the source vendored in z3-sys and link it statically —
# the release-binary flavor (`largo-full`). Default stays dynamic against
# the system libz3.
static-link-z3 = ["z3/static-link-z3"]

[dependencies]
# SMT solver
z3 = "0.12"

# Serialization for license cache
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for license validation
ureq = { version = "2.9", features = ["json"] }

# User directories for cache
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
