[package]
name = "logicaffeine-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Z3-based static verification for Logicaffeine (requires Pro+ license)"
readme = "README.md"

[features]
# Build Z3 from vendored source and link it statically — the release-binary
# flavor (`largo-full`). z3 0.20 renamed this feature `vendored` (builds the
# z3-src crate via cmake; the vendored Z3 4.16 compiles cleanly under libc++,
# which the old 4.12 did not on macOS). Default stays dynamic against system Z3.
static-link-z3 = ["z3/vendored"]

[dependencies]
# SMT solver
z3 = "0.20"

# Serialization for license cache
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for license validation
ureq = { version = "2.9", features = ["json"] }

# User directories for cache
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
